tests/ui/match/match-const-tuple-type-mismatch.stderr
error[E0308]: mismatched types
  --> $DIR/match-const-tuple-type-mismatch.rs:7:9
   |
LL | const A: (isize, isize) = (4, 2);
   | ----------------------- constant defined here
LL | fn main() {
LL |     match 42 {
   |           -- this expression has type `{integer}`
LL |         A => (),
   |         ^
   |         |
   |         expected integer, found `(isize, isize)`
   |         `A` is interpreted as a constant, not a new binding
   |         help: introduce a new binding instead: `other_a`
   |
   = note: expected type `{integer}`
             found tuple `(isize, isize)`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
